--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,19 @@
-github: [metadata]
-theme: jekyll-theme-cayman
-remote_theme: pages-themes/cayman@v0.2.0
-plugins:
-- jekyll-remote-theme
 title: Seiya Kobayashi
+author:
+  name: Seiya Kobayashi / 小林 聖弥
+  email: work@seiya.tech
+description: >
+  Seiya Kobayashi's personal website.
+remote_theme: jekyll/minima
+plugins:
+  - jekyll-seo-tag
+github: [metadata]
+header_pages:
+  - about.md
+show_excerpts: true
+minima:
+  skin: auto
+  date_format: "%Y-%m-%d"
+  social_links:
+   - { platform: telegram, user_url: "https://t.me/seiya_kobayashi" }
+   - { platform: facebook, user_url: "https://www.facebook.com/seiya.kb" }
