Fix footer; modify 'about' page

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Seiya Kobayashi
 author:
   name: Seiya Kobayashi / 小林 聖弥
-  email: work@seiya.tech
+  email: eng@seiya.work
 description: >
   Seiya Kobayashi's personal website.
 remote_theme: jekyll/minima
