--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,16 @@
 title: Seiya Kobayashi
+tagline: >
+  Seiya Kobayashi's engineering blog. 小林聖弥の技術系ブログ。
+description: >
+  Seiya Kobayashi's engineering blog. Blog posts cover a wide range topics, including, but not limited to, AI, blockchains, applied cryptography, Ethereum, and ZKP (Zero-Knowledge Proof).
+  小林聖弥の技術系ブログ。取り扱うブログトピックは、AI・ブロックチェーン・応用暗号技術・イーサリアム・ゼロ知識証明と多岐に及ぶ。
+url: https://blog.seiya.work/
 author:
   name: Seiya Kobayashi | 小林 聖弥
   email: eng@seiya.work
-description: >
-  Seiya Kobayashi's personal website.
+twitter:
+  username: seiya_tech
+locale: ja_JP
 remote_theme: jekyll/minima
 plugins:
   - jekyll-seo-tag
