Update tagline & description

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 title: Seiya Kobayashi
 tagline: >
-  Seiya Kobayashi's engineering blog. 小林聖弥の技術系ブログ。
+  Seiya Kobayashi's engineering blog
 description: >
-  Seiya Kobayashi's engineering blog. Blog posts cover a wide range topics, including, but not limited to, AI, blockchains, applied cryptography, Ethereum, and ZKP (Zero-Knowledge Proof).
-  小林聖弥の技術系ブログ。取り扱うブログトピックは、AI・ブロックチェーン・応用暗号技術・イーサリアム・ゼロ知識証明と多岐に及ぶ。
+  Blog posts cover a wide range of topics; from AI to blockchain to applied cryptography.
 url: https://blog.seiya.work/
 author:
   name: Seiya Kobayashi | 小林 聖弥
