--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ tagline: >
   Seiya Kobayashi's engineering blog
 description: >
   Blog posts cover a wide range of topics; from AI to blockchain to applied cryptography.
-url: https://blog.seiya.work/
+url: https://blog.seiya.work
 author:
   name: Seiya Kobayashi | 小林 聖弥
   email: eng@seiya.work
